--- a/src/App.css
+++ b/src/App.css
@@ -6,9 +6,7 @@ body {
 
 }
 
-h1,
-p,
-div {
+h1,p,div,h3,h2 {
   color: white;
   margin: 0;
 
@@ -30,6 +28,22 @@ div {
     padding-left: 2%;
     
   }
+}
+
+html::-webkit-scrollbar {
+  width: 10px; /* Width of the scrollbar */
+  height: 40px;
+}
+
+/* Styling the scrollbar thumb */
+html::-webkit-scrollbar-thumb {
+  background-color: #636060; /* Color of the scrollbar thumb */
+  border-radius: 5px; /* Rounded corners for the thumb */
+}
+
+/* Styling the scrollbar track */
+html::-webkit-scrollbar-track {
+  background-color: transparent /* Color of the scrollbar track */
 }
 
 /* Header */
@@ -135,11 +149,129 @@ padding: 2%;
 
 /* Experience */
 
+.experienceSection{
+  height: 100vh;
+
+}
 .ExperinceCardsFlexBox{
   display: flex; 
+  height: 95%;
+  justify-content: space-evenly;
   width: 100%;
+  
 }
 .ExperienceCard{
-  width: 40%;
-  margin: 5%;
+  width: 32%;
+ height: 70%;
+  margin: 5% ;
+  border-radius: 3%;
+  box-shadow: 5px 4px 10px 2px#F05941;
+  overflow: hidden; /* Hide content that overflows its box */
+  overflow-y: auto;
+  scroll-behavior: smooth;
+  transition: 0.5s;
+}
+
+.ExperienceCard:hover {
+  box-shadow: 0 12px 30px 0 #F05941;
+}
+.ExperienceCard::-webkit-scrollbar {
+  width: 10px; /* Width of the scrollbar */
+  height: 40px;
+}
+
+/* Styling the scrollbar thumb */
+.ExperienceCard::-webkit-scrollbar-thumb {
+  background-color: #636060; /* Color of the scrollbar thumb */
+  border-radius: 5px; /* Rounded corners for the thumb */
+}
+
+/* Styling the scrollbar track */
+.ExperienceCard::-webkit-scrollbar-track {
+  background-color: transparent /* Color of the scrollbar track */
+}
+
+@media screen and (max-width: 1000px) {
+  .ExperinceCardsFlexBox {
+    display: block;/* Single column layout */
+  }
+  .ExperienceCard{
+    width: 80%;
+    margin: 10% ;
+  }
+  
+}
+
+@media screen and (min-width: 1001px) and (max-width: 1671px) {
+ 
+  .ExperienceCard{
+    width: 80%;
+    margin: 2% ;
+  }
+  
+}
+
+/* experience > experience card details */
+.cardDetails{
+  width: 100%;
+  height: 100%;
+  position: relative;
+  
+}
+.cardTile{
+  padding: 2% 0 0 2%;
+  text-decoration: underline;
+}
+.cardSubHeading{
+  padding: 1% 0 0 3%;
+}
+li{
+  font-size: large;
+  padding-left: 2%;
+  padding-bottom: 2%;
+}
+
+/* experience > experience card details >ToolCards  */
+.toolCards{
+  /* background-color: transparent; */
+  width: 100%;
+  position: relative;
+  z-index: 2;
+  animation:cardHover 0.5s ease forwards;
+  background-color: rgb(33, 32, 32);
+  opacity: 0.1;
+}
+@keyframes cardHover{
+  
+  0%{
+    height: 0%;
+   
+  }
+  
+  100%{
+    opacity: 0.9;
+    height: 100%;
+   
+    
+  }
+}
+.toolCardsBox{
+  width: 30%;
+  height: 10%;
+ 
+
+  border-radius: 25px;
+  text-align: center;
+  background-color: #333;
+}
+
+.cardNoHover{
+  position: relative;
+  z-index: 1;
+}
+.cardHover{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  z-index: 2;
 }
