--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,8 @@
 /* Main */
 html,
 body {
-  background-color:  rgb(34, 9, 44);;
+   background-image: linear-gradient(rgb(33, 33, 33),rgb(0,0,0));
+
   position: relative;
   z-index: 2;
 
@@ -13,7 +14,7 @@ body {
   z-index: -2;
   width: 100px;
   height: 100px;
-  bottom:-40px ;
+  bottom:-100px ;
   box-shadow: 0 0 50px #0072ff,
               0 0 100px #0072ff,
               0 0 150px #0072ff,
@@ -130,7 +131,8 @@ html::-webkit-scrollbar-thumb {
 
 /* Styling the scrollbar track */
 html::-webkit-scrollbar-track {
-  background-color: transparent /* Color of the scrollbar track */
+  background-image: linear-gradient(rgb(33, 33, 33),rgb(0,0,0));
+
 }
 
 /* Header */
@@ -247,12 +249,20 @@ padding: 2%;
   width: 100%;
   
 }
+.linearGradient{
+  width: 99%;
+ height: 99%;
+ background-color:  rgb(34, 9, 44);
+ border-radius: 3%;
+ margin: 0.5% 0 0 0.5%;
+}
 .ExperienceCard{
   width: 32%;
  height: 70%;
   margin: 5% ;
   border-radius: 3%;
-  box-shadow: 5px 4px 10px 2px#F05941;
+  
+  background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
   overflow: hidden; /* Hide content that overflows its box */
   overflow-y: auto;
   scroll-behavior: smooth;
@@ -326,32 +336,39 @@ li{
   z-index: 2;
   animation:cardHover 0.5s ease forwards;
   background-color: rgb(33, 32, 32);
-  opacity: 0.1;
+  opacity: 1;
+  border-radius: 3%;
 }
 @keyframes cardHover{
   
   0%{
     height: 0%;
-   
+    border-radius: 3%;
+    
   }
   
   100%{
     opacity: 0.9;
     height: 100%;
+  border-radius: 3%;
    
     
   }
 }
 .toolCardsBox{
-  width: 30%;
-  height: 10%;
- 
-
-  border-radius: 25px;
+  
   text-align: center;
+  border-radius: 25px;
+  height: 50px;
   background-color: #333;
 }
+.cardSkillContainer{
+  display: grid;
+  grid-template-columns: 300px 300px;
+  gap: 20px;
+  margin: 3%;
 
+}
 .cardNoHover{
   position: relative;
   z-index: 1;
