--- a/src/App.css
+++ b/src/App.css
@@ -2,13 +2,41 @@
 /* Main */
 html,
 body {
-   background-image: linear-gradient(rgb(33, 33, 33),rgb(0,0,0));
-
+  
+  font-family: sans-serif;
   position: relative;
-  z-index: 2;
+  z-index: -2;
+ 
 
 }
-.wrapper span{
+.backGroundStyle{
+  background-color: black;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  background-image: radial-gradient(circle, #0f0528 10%, #050505 100%);
+  /* background: radial-gradient(circle, rgba(255,134,134,1) 10%, rgb(167, 165, 165) 100%); */
+
+  /* background-image: radial-gradient(closest-side at 70% 5%, #1d1338 , #050505 ); */
+  z-index: -1;
+}
+.grandientWrapper{
+  width: 100%;
+  height: 100%;
+}
+
+.content{
+  
+  position: relative;
+  z-index: 1;
+}
+/* .wrapper{
+  position: fixed;
+  z-index: -2;
+  background-image: radial-gradient(circle, #291d48 30%, #050505 100%);
+
+}  
+ .wrapper span{
   background-color: rgb(34, 9, 44);
   position: fixed;
   z-index: -2;
@@ -20,9 +48,9 @@ body {
               0 0 150px #0072ff,
               0 0 200px #0072ff;
   animation: animate 10s linear infinite ;
-}
+} 
 
-.wrapper span:nth-child(1){
+ .wrapper span:nth-child(1){
   left: 60px;
   animation-delay:0.6s ;
 }
@@ -93,11 +121,11 @@ body {
     opacity: 0;
   }
 }
-
+*/
 h1,p,div,h3,h2 {
   color: white;
   margin: 0;
-
+  
 }
 
 .title{
@@ -159,13 +187,21 @@ padding: 2%;
 /* Footer */
 
 /* Intro */
+.infoCard{
+  
 
+  border-radius: 15px;
+  padding: 2%;
+  
+}
 .InfoDetails{
+  
+
   animation: briefInfo 1s ease forwards;
 }
 
 .intro {
-  height: 94vh;
+  height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
 
@@ -173,6 +209,14 @@ padding: 2%;
 
 .full-row {
  display: contents;
+}
+#anchor{
+  
+  padding: 0;
+  
+  border-radius: 15px;
+  height:450px;
+   width:350px;
 }
 
 .manContainer {
@@ -184,24 +228,28 @@ padding: 2%;
 
 .eye1 {
   position: relative;
-  bottom: 45px;
-  right: 174px;
+  bottom: 55px;
+  right: 234px;
 }
 
 .eye2 {
   position: relative;
-  bottom: 45px;
-  right: 109px;
+  bottom: 55px;
+  right: 154px;
 }
 
 @media screen and (max-width: 768px) {
   .intro {
     grid-template-columns: 1fr; /* Single column layout */
+    height: 120vh;
   }
 
   .full-row {
     display: block; /* Display on smaller screens */
     grid-column: 1 / span 2; /* Span across both columns */
+    
+    
+  
   }
 }
 
@@ -226,12 +274,12 @@ padding: 2%;
 
   0%{
     opacity: 0;
-    margin: 25% 10% 20% 0%
+    margin: 30% 10% 20% 0%
   }
   
   100%{
     opacity: 1;
-    margin: 25% 10% 20% 20%
+    margin: 30% 10% 20% 20%
   }
 }
 
@@ -255,6 +303,8 @@ padding: 2%;
  background-color:  rgb(34, 9, 44);
  border-radius: 3%;
  margin: 0.5% 0 0 0.5%;
+ overflow: hidden; /* Hide content that overflows its box */
+ overflow-y: auto;
 }
 .ExperienceCard{
   width: 32%;
@@ -262,29 +312,29 @@ padding: 2%;
   margin: 5% ;
   border-radius: 3%;
   
-  background-image: linear-gradient(to right, red,orange,yellow,green,blue,indigo,violet);
+  background-image: linear-gradient(to right, violet,violet,blue,blue,blue,violet,violet);
   overflow: hidden; /* Hide content that overflows its box */
   overflow-y: auto;
   scroll-behavior: smooth;
   transition: 0.5s;
 }
 
-.ExperienceCard:hover {
+.linearGradient:hover {
   box-shadow: 0 12px 30px 0 #F05941;
 }
-.ExperienceCard::-webkit-scrollbar {
+.linearGradient::-webkit-scrollbar {
   width: 10px; /* Width of the scrollbar */
   height: 40px;
 }
 
 /* Styling the scrollbar thumb */
-.ExperienceCard::-webkit-scrollbar-thumb {
+.linearGradient::-webkit-scrollbar-thumb {
   background-color: #636060; /* Color of the scrollbar thumb */
   border-radius: 5px; /* Rounded corners for the thumb */
 }
 
 /* Styling the scrollbar track */
-.ExperienceCard::-webkit-scrollbar-track {
+.linearGradient::-webkit-scrollbar-track {
   background-color: transparent /* Color of the scrollbar track */
 }
 
@@ -295,8 +345,12 @@ padding: 2%;
   .ExperienceCard{
     width: 80%;
     margin: 10% ;
+    max-height: 50vh;
   }
-  
+  .experienceSection{
+    
+    min-height: 120vh;
+   }
 }
 
 @media screen and (min-width: 1001px) and (max-width: 1671px) {
@@ -304,7 +358,9 @@ padding: 2%;
   .ExperienceCard{
     width: 80%;
     margin: 2% ;
+   
   }
+  
   
 }
 
@@ -335,7 +391,7 @@ li{
   position: relative;
   z-index: 2;
   animation:cardHover 0.5s ease forwards;
-  background-color: rgb(33, 32, 32);
+  background-color: rgb(102, 102, 102);
   opacity: 1;
   border-radius: 3%;
 }
@@ -357,14 +413,14 @@ li{
 }
 .toolCardsBox{
   
-  text-align: center;
-  border-radius: 25px;
+  
+  border-radius: 15px;
   height: 50px;
   background-color: #333;
 }
 .cardSkillContainer{
   display: grid;
-  grid-template-columns: 300px 300px;
+  grid-template-columns: 45% 45%;
   gap: 20px;
   margin: 3%;
 
@@ -378,4 +434,143 @@ li{
   height: 100%;
   position: absolute;
   z-index: 2;
+}
+
+.toolsImage{
+  margin-left:10%;
+  aspect-ratio: 3/2;
+  object-fit: contain;
+  
+}
+
+/* Projects */
+/* .pageContainer{
+  background-color: yellow;
+  width: 65%;
+  height: 75%;
+  margin: 5% 18%;
+  border-radius: 20px;
+  position: relative;
+}
+.pageContainer::before{
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  right: 50%;
+  background-color:white;
+  border-radius: 20px 0 0 20px;
+  transform-origin: center right;
+  transform: rotateY(180deg);
+  transform-style: preserve-3d;
+  transition: 0.7s ease all;
+  box-shadow: 0 0 0 .25px;
+}
+
+.pageContainer:hover::before{
+  transform: rotateY(0deg);
+} */
+
+.projectContainer{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 95%;
+  font-family: sans-serif;
+}
+/* project > book  */
+
+.book{
+  
+  position: relative;
+  width: 50%;
+  height: 80%;
+  
+}
+
+.paper{
+  
+  position: absolute;
+  /* reason we are using paper so that when we use more papers we want them to overlap one on top of the other */
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  perspective: 2000px;
+}
+
+.front,.back{
+  background-color: rgb(248, 155, 155);
+  position: absolute;
+  width: 50%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  transform-origin: left;
+  transition: transform .5s;
+
+}
+
+.front{
+  z-index: 2;
+  backface-visibility: hidden;
+  border-left: 3px solid powderblue;
+}
+
+.back-content{
+  transform: rotateY(180deg);
+}
+
+.back{
+  z-index: 1;
+}
+
+.front-content,.back-content{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button{
+  border: none;
+  background-color: transparent;
+  cursor: pointer;
+  margin: 10px;
+}
+
+button:focus{
+  outline: none;
+}
+
+button:hover i{
+  color: rgb(98, 98, 98);
+}
+button > i{
+  color: gray;
+  font-size: 50px;  
+}
+
+/* paper */
+
+#p1{
+  z-index:  6;
+}
+
+#p2{
+  z-index:  5;
+}
+#p3{
+  z-index:  4;
+}
+
+.flipped .front, .flipped .back{
+  transform: rotateY(-180deg);
+}
+.back-content img{
+  position: relative;
+  top: -15%;
+  height: 70%;
+  width: 100%;
 }
