--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@ body {
   font-family: sans-serif;
   position: relative;
   z-index: -2;
- 
+  
 
 }
 .backGroundStyle{
@@ -128,27 +128,12 @@ h1,p,div,h3,h2 {
   
 }
 
-.title{
-  animation: titleAnim 1s ease forwards;
-}
 
-@keyframes titleAnim{
-
-  0%{
-    opacity: 0;
-    padding-left: 0%;
-  }
-  
-  100%{
-    opacity: 1;
-    padding-left: 2%;
-    
-  }
-}
 
 html::-webkit-scrollbar {
   width: 10px; /* Width of the scrollbar */
   height: 40px;
+  scroll-behavior: smooth;
 }
 
 /* Styling the scrollbar thumb */
@@ -185,6 +170,24 @@ html::-webkit-scrollbar-track {
 padding: 2%;
 }
 /* Footer */
+.footerStyle{
+  border-top: 1px solid rgba(255, 255, 255, 0.149);
+  border-bottom: 1px solid rgba(255, 255, 255, 0.149);
+
+}
+.centerDiv{
+  width: 15%;
+  padding: 2%;
+  height: 20%;
+  color: white;
+  text-decoration: none;
+  border-radius: 15px;
+  border: 1px solid white;
+  display: flex;
+  text-align: center;
+  align-items: center;
+
+}
 
 /* Intro */
 .infoCard{
@@ -485,7 +488,7 @@ li{
   position: relative;
   width: 50%;
   height: 80%;
-  
+ transform: translate(50%);
 }
 
 .paper{
@@ -497,17 +500,18 @@ li{
   top: 0;
   left: 0;
   perspective: 2000px;
+ 
 }
 
 .front,.back{
-  background-color: rgb(248, 155, 155);
+  background-image: radial-gradient(circle, #0f0528 10%, #050505 100%);
   position: absolute;
   width: 50%;
   height: 100%;
   top: 0;
   left: 0;
   transform-origin: left;
-  transition: transform .5s;
+  transition: transform .7s;
 
 }
 
@@ -519,6 +523,11 @@ li{
 
 .back-content{
   transform: rotateY(180deg);
+  border-radius: 15px 0 0 15px;
+}
+.front-content{
+  border-radius:  0 15px 15px 0;
+
 }
 
 .back{
@@ -531,6 +540,8 @@ li{
   display: flex;
   justify-content: center;
   align-items: center;
+  border: 2px solid white;
+ 
 }
 
 button{
@@ -538,6 +549,8 @@ button{
   background-color: transparent;
   cursor: pointer;
   margin: 10px;
+  position: relative;
+  z-index: 20;
 }
 
 button:focus{
@@ -555,14 +568,20 @@ button > i{
 /* paper */
 
 #p1{
-  z-index:  6;
+  z-index:  7;
 }
 
 #p2{
-  z-index:  5;
+  z-index:  6;
 }
 #p3{
+  z-index:  5;
+}
+#p4{
   z-index:  4;
+}
+#p5{
+  z-index:  3;
 }
 
 .flipped .front, .flipped .back{
@@ -570,7 +589,108 @@ button > i{
 }
 .back-content img{
   position: relative;
-  top: -15%;
-  height: 70%;
+  top: -5%;
+  height: 90%;
   width: 100%;
+  object-fit: cover;
+  border-radius: 15px 0 0 0;
+
+}
+
+/* projext > projextsabout */
+.aboutInfoProjects{
+  padding-top: 5%;
+ width: 100%;
+ height: 100%;
+ padding-left: 3%;
+ padding-right: 3%;
+}
+.borderRadius{
+  border: 1px solid white;
+  border-radius: 15px;
+  height: 100%;
+  width: 47%;
+}
+
+.borderRadius img{
+  
+  margin: 2%;
+  
+  height: 40px;
+}
+
+
+
+/* scroll animate */
+.title{
+  animation: titleAnim 2s ease-in-out;
+  animation-timeline: view();
+ 
+}
+
+@keyframes titleAnim{
+
+  0%{
+    opacity: 0;
+    padding-left: 0%;
+  }
+  
+  100%{
+    opacity: 1;
+    padding-left: 2%;
+    
+  }
+}
+
+.card1{
+  position: relative;
+ 
+
+  animation: card1Ani 2s ease-in-out;
+  animation-timeline: view();
+}
+.card2{
+  position: relative;
+  animation: card2Ani 2s ease-in-out;
+  
+  animation-timeline: view();
+}
+
+@keyframes card1Ani{
+
+  0%{
+    opacity: 0;
+    position: relative;
+     
+  }
+  25%{
+    position: relative;
+
+    opacity: 1;
+    
+  }
+  100%{
+    position: relative;
+
+    opacity: 1;
+    top: 0;
+
+    
+  }
+}
+@keyframes card2Ani{
+
+  0%{
+    opacity: 0;
+    padding-left: 0%;
+  }
+  25%{
+    opacity: 1;
+    
+  }
+  100%{
+    opacity: 1;
+    
+    
+  }
 }
