--- a/src/App.css
+++ b/src/App.css
@@ -7,22 +7,23 @@ html,
 body {
   
   font-family: sans-serif;
-  position: relative;
-  z-index: -2;
+ 
   scroll-behavior: smooth;
   
   
 
 }
 
-h1,h2,h3,h4,h5,h6,p{
-  color: white;
+h1,h2,h3,h4,h5,h6,p,div{
+  color: white; margin: 0;
 }
+
+
 
          
 .btn-grad {
   background-image: linear-gradient(to right, #000000 0%, #1d0a4a  51%, #000000  100%);
-  margin: 4px 10px;
+  margin: 0 1% 0 1%;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
@@ -32,6 +33,8 @@ h1,h2,h3,h4,h5,h6,p{
   border-radius: 10px;
   display: block;
   text-decoration: none;
+  
+  
 }
 
 .btn-grad:hover {
@@ -62,103 +65,8 @@ h1,h2,h3,h4,h5,h6,p{
   position: relative;
   z-index: 1;
 }
-/* .wrapper{
-  position: fixed;
-  z-index: -2;
-  background-image: radial-gradient(circle, #291d48 30%, #050505 100%);
 
-}  
- .wrapper span{
-  background-color: rgb(34, 9, 44);
-  position: fixed;
-  z-index: -2;
-  width: 100px;
-  height: 100px;
-  bottom:-100px ;
-  box-shadow: 0 0 50px #0072ff,
-              0 0 100px #0072ff,
-              0 0 150px #0072ff,
-              0 0 200px #0072ff;
-  animation: animate 10s linear infinite ;
-} 
 
- .wrapper span:nth-child(1){
-  left: 60px;
-  animation-delay:0.6s ;
-}
-
-.wrapper span:nth-child(2){
-  left: 10%;
-  animation-delay:3s ;
-  width: 60px;
-  height: 60px;
-}
-
-.wrapper span:nth-child(3){
-  left: 20%;
-  animation-delay:2s ;
- 
-}
-.wrapper span:nth-child(4){
-  left: 30%;
-  animation-delay:5s ;
-  width: 80px;
-  height: 80px;
-}
-.wrapper span:nth-child(5){
-  left: 40%;
-  animation-delay:1s ;
- 
-}
-
-.wrapper span:nth-child(6){
-  left: 50%;
-  animation-delay:7s ;
- 
-}
-.wrapper span:nth-child(7){
-  left: 60%;
-  animation-delay:6s ;
- width: 100px;
- height: 100px;
-}
-.wrapper span:nth-child(8){
-  left: 70%;
-  animation-delay:8s ;
- 
-}
-.wrapper span:nth-child(9){
-  left: 80%;
-  animation-delay:6s ;
-  width: 90px;
-  height: 90px;
-}
-
-.wrapper span:nth-child(10){
-  left: 90%;
-  animation-delay:4s ;
- 
-}
-
-@keyframes animate{
-  0%{
-    transform: translateY(0);
-    opacity: 1;
-  }
-  80%{
-    opacity: .7;
-  }
-  100%{
-    transform: translateY(-800px) rotate(360deg);
-    opacity: 0;
-  }
-}
-*/
-h1,p,div,h3,h2 {
-  color: white;
-  margin: 0;
-  
-}
 
 
 
@@ -182,8 +90,11 @@ html::-webkit-scrollbar-track {
 
 /* Header */
 
+
+
 .navigationHeader{
   width: 100%;
+  height: 6vh;
   padding-top: 1.5%;
   display: flex;
 }
@@ -271,7 +182,7 @@ padding: 2%;
 }
 
 .intro {
-  height: 100vh;
+  min-height: 100vh;
   display: grid;
   grid-template-columns: 1fr 1fr;
 
@@ -311,7 +222,6 @@ padding: 2%;
 @media screen and (max-width: 768px) {
   .intro {
     grid-template-columns: 1fr; /* Single column layout */
-    height: 120vh;
   }
 
   .full-row {
@@ -323,9 +233,16 @@ padding: 2%;
 .greetingsTitle{
   animation: myAnim 3s ease infinite;
   font-size: 4rem;
+  transition: 0.5s;
+
 }
 .greetingsTitles{
   font-size: 4rem;
+  transition: 0.5s;
+
+}
+.aboutStartupInfo {
+  font-weight: 100; 
 }
 
 @keyframes myAnim {
@@ -779,4 +696,71 @@ button > i{
 /* media queries 
 
 greetingsTitle reduce the size of text
+
+
+.btn-grad {
+  background-image: linear-gradient(to right, #000000 0%, #1d0a4a  51%, #000000  100%);
+  margin: 0 1% 1% 1%;
+  text-align: center;
+  text-transform: uppercase;
+  transition: 0.5s;
+  background-size: 300% auto;
+  color: white;            
+  box-shadow: 0 0 10px #eeeeee58,inset 0 0 2px white;
+  border-radius: 10px;
+  display: block;
+  text-decoration: none;
+  font-size:x-small;
+  padding: 10px;
+}
 */
+
+@media screen and (max-width: 768px) {
+ 
+  .btn-grad {
+    background-image: linear-gradient(to right, #000000 0%, #1d0a4a  51%, #000000  100%);
+    margin: 0 1% 1% 1%;
+    text-align: center;
+    text-transform: uppercase;
+    transition: 0.5s;
+    background-size: 300% auto;
+    color: white;            
+    box-shadow: 0 0 10px #eeeeee58,inset 0 0 2px white;
+    border-radius: 10px;
+    display: block;
+    text-decoration: none;
+    font-size:small;
+    padding: 10px;
+  }
+  .navigationHeader{
+    width: 100%;
+    height: 40px;
+    padding-top: 1.5%;
+    display: flex;
+  }
+
+  @keyframes briefInfo{
+
+    0%{
+      opacity: 0;
+      margin: 10% 0 0% 0  
+    }
+    
+    100%{
+      opacity: 1;
+      margin: 10% 0 0 10%
+
+    }
+  }
+  .greetingsTitle,.greetingsTitles{
+    font-size: 2rem;
+    padding-left: 5%;
+  }
+  .aboutStartupInfo {
+    font-weight: 100;
+    font-size: 1rem; 
+    padding-left: 5%;
+
+  }
+  
+}
