--- a/src/App.css
+++ b/src/App.css
@@ -170,6 +170,28 @@ padding-top: 5%;
 flex-direction: row-reverse;
  
 }
+
+.projectToolsContainer{
+  display: inline-grid;
+  gap: 30px;
+  grid-template-columns: auto auto auto auto auto;
+  text-align: center;
+  
+  justify-items: center;
+  
+}
+.flexStyleforProjectTools{
+  display: flex;
+  height: 50px;
+  
+  border-radius: 10px;
+  box-shadow:  5px 5px 8px rgba(0, 0, 0, 0.737),
+             -5px -5px 8px #0f0f0f44;
+  border-radius: 10px;
+  background-color: #1E1B1B;
+  align-items: center;
+  padding: 1% 10%;
+}
 .centerDiv{
   width: fit-content;
   padding: 2%;
@@ -478,19 +500,20 @@ li{
 
 .projectContainer{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   height: 95%;
   font-family: sans-serif;
+  min-height: 650px !important;
 }
 /* project > book  */
 
 .book{
   
   position: relative;
-  width: 80%;
-  height: 80%;
-  left: -32%;
+  width: 85%;
+  height: 80vh;
+  left: -35%;
  transform: translate(50%);
  
 }
@@ -504,7 +527,7 @@ li{
   top: 0;
   
   perspective: 2000px;
- 
+ min-height: 650px;
 }
 
 .front,.back{
@@ -609,6 +632,7 @@ button > i{
  padding-left: 3%;
  padding-right: 3%;
 }
+
 .borderRadius{
   border: 1px solid rgba(255, 255, 255, 0.548);
   border-radius: 15px;
@@ -847,7 +871,7 @@ greetingsTitle reduce the size of text
     padding-left: 5%;
 
   }
-
+  
   /* Experience */
   @keyframes titleAnim{
     0%{
@@ -899,10 +923,69 @@ greetingsTitle reduce the size of text
     color: white;
     text-decoration: none;
     border-radius: 15px;
-    
-    
+    text-align: center;
+  }
+
+  .projectToolsContainer{
+    display: inline-grid;
+    gap: 10px;
+    grid-template-columns: auto  auto  ;
     text-align: center;
     
+    justify-items: center;
+    
+  }
+  .flexStyleforProjectTools{
+    display: flex;
+    height: 50px;
+    
+    border-radius: 10px;
+    box-shadow:  5px 5px 8px rgba(0, 0, 0, 0.737),
+               -5px -5px 8px #0f0f0f44;
+    border-radius: 10px;
+    background-color: #1E1B1B;
+    align-items: center;
+    padding: 1% 2%;
+  }
+}
+
+#next-btn, #prev-btn{
+  position: relative;
+  top: 48%;
+  left: 48%;
+  transform: translate(-100%, -0%);
+}
+
+@media screen and (max-width:1289px) {
+  /* Projects */
+  .aboutInfoProjects h1, .aboutInfoProjects h3{
+    font-size: small;
+    
+  }
+ 
   
+}
+
+@media screen and (max-width:1289px) and (min-width:768px) {
+  .projectToolsContainer{
+    display: inline-grid;
+    gap: 30px;
+    grid-template-columns: auto auto auto  ;
+    text-align: center;
+    
+    justify-items: center;
+    
+  }
+  .flexStyleforProjectTools{
+    display: flex;
+    height: 50px;
+    
+    border-radius: 10px;
+    box-shadow:  5px 5px 8px rgba(0, 0, 0, 0.737),
+               -5px -5px 8px #0f0f0f44;
+    border-radius: 10px;
+    background-color: #1E1B1B;
+    align-items: center;
+    padding: 1% 10%;
   }
 }
